# log-scraper

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  dev.docker-compose.yml
.circleci/: config.yml
helm/: Chart.yaml  README.md  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
helm/templates/tests/: test-connection.yaml
scripts/: docker_build.sh  docker_cleanup.sh  docker_dev_run.sh  docker_web_build.sh  proxy_dev_build.sh
src/: caching.rs  cron_tasks.rs  env_config.rs  main.rs  scraper.rs  server.rs  storage.rs
src/api/: api_types.rs  index_api.rs  logs_api.rs  mod.rs
src/caching/: mod.rs
src/new_relic/: mod.rs  types.rs
src/storage/: mod.rs
web/: README.md  Web.Dockerfile  package-lock.json  package.json
web/public/: index.html  manifest.json
web/src/: App.css  App.tsx  LogTypes.tsx
web/src/services/: ApiService.tsx  UtilService.tsx
web/src/ui/: ConfirmModal.tsx  LogDashboard.tsx  PaginationSection.tsx
web/src/ui/log-content/: LogContentHeader.tsx  LogContentList.tsx  LogContentSection.tsx
web/src/ui/log-files/: LogFileList.tsx  LogFilesSection.tsx  TabPanel.tsx
