[package]
name = "log-scraper"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# reqwest = { version = "0.11", features = ["blocking"] }
chrono = { version = "0.4.23", features = ["serde"] }
reqwest = { version = "0.11.14", default-features = false, features = ["blocking", "json", "rustls-tls"]  }
serde = { version = "1.0.152", features = ["derive"]}
serde_json = {version = "1.0.79"}
tokio = { version = "1.9.0", features = ["full"] }
mini-redis = "0.4"
actix-web = "4"
once_cell = "1.17.1"
actix-files = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
job_scheduler = "1.2.1"

