[package]
name = "log-scraper"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# reqwest = { version = "0.11", features = ["blocking"] }
chrono = { version = "0.4.23", features = ["serde"] }
reqwest = { version = "0.11.27", default-features = false, features = ["blocking", "json", "rustls-tls"]  }
serde = { version = "1.0.215", features = ["derive"]}
serde_json = {version = "1.0.133"}
tokio = { version = "1.42.0", features = ["full"] }
redis = "0.27.6"
actix-web = "4.9.0"
once_cell = "1.17.1"
actix-files = "0.6.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
job_scheduler = "1.2.1"
actix-cors = "0.7.0"
